Opened 9 years ago
Closed 8 years ago
#12817 closed bug (fixed)
[MediaPlayer] When I play mp3 audio files and wmv video files, I hear crackle noise in background.
Reported by: | Giova84 | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/MediaPlayer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
As the subject states, when I play such files using MediaPlayer I can hear - light but evident - crackle noise, which is similar to a vinyl on a turntable. No trouble with wav files and mp4 video files (maybe depends by the audio encoding).
All is fine with SoundPlay and Mplayer.
Change History (31)
comment:1 by , 9 years ago
follow-up: 4 comment:3 by , 9 years ago
Look like a regression of an earlier bug i think Jua worked on. It is easier to replicate on slow PC and it occur a lot if i move around a big window causing a lot of refresh drawing to the app server.
comment:4 by , 9 years ago
Replying to AlienSoldier:
It is easier to replicate on slow PC
Well, for me this bug also occurs on an average pc which is provided with a dual core @ 2.60GHz and 6 GiB of DDR3 ram :-)
comment:5 by , 9 years ago
In those situations bisecting is the only real way to identify the issue. I don't have a system with this issue so it's impossible to do it for me. Also I'd like to remember that testing should be done on gcc2h builds.
comment:6 by , 9 years ago
That might be hard to do as i did not update for a long time prior to this. I just updated to hrev50374 and the problem is still there but a little different. It seem to click less (perhaps not at all) when not interacting with the computer but if i drag a window around then the clicking is more pronounced this time. I have a fairly common hardware configuration you may be able to come close to: Intel entry level server with a P4, SE7210TP1-E This one have on board video card and network, only the soundcard is added and it is a common SB live PCI. I tested native video driver and VESA both have the problem.
comment:7 by , 9 years ago
I might have a clue about what's the cause. I don't have a pc like your enough near so that I can test.
So try hrev50192 and let me know if the problem is still there.
comment:8 by , 9 years ago
I don't see it there: http://download.haiku-os.org/nightly-images/x86_gcc2_hybrid/ It jump from 162 to 214. Can you provide me a link to the raw 50192 so i can mount it in current partition and install it on a second one?
comment:9 by , 9 years ago
hrev50162 is OK :-) as it doesn't include the commit I think is the candidate cause.
comment:10 by , 9 years ago
in 50162 media player play fine. Don't do like with the Ferma last theorem and die with the answer without writing it anywhere :P
comment:11 by , 9 years ago
comment:14 by , 9 years ago
i busted my available time for this at the moment but i will have the result ready before tomorrow between 214 and 216.
comment:15 by , 9 years ago
In both 50214 and 50216 the sound play fine without crackles. I overwrited 214 with 216 in the installer, i guess that is enough?
comment:16 by , 9 years ago
Sadly, this is just showing the issue was introduced somewhere in a hrev comprised between 50216 and 50347. Bisecting is the only way to go :
https://dev.haiku-os.org/wiki/BinarySearch
With this method and so little revisions you have to try just a few nightlies.
comment:17 by , 9 years ago
So be it, curently getting 280. (it is in fact between 216 and 336 according to Giova84). Might take me a few days that said.
comment:18 by , 9 years ago
Beware you don't need to test all those revs, you need to test the hrev in the middle of the range to restrict it further until you get a little one.
comment:20 by , 9 years ago
I propose we collaborate on this one via IRC or email before it turns into a 100 comment thread. However, the soonest I can pitch in is tomorrow or Saturday.
comment:21 by , 9 years ago
317 crackle. A task force for finding regression sure would be nice, and i could participate easily if i can replicate a bug. I have the time to do 299 before going to work, will post in 15 min.
comment:23 by , 9 years ago
290 is fine. I will do 295 now as it is the last i can dowload from the nighly list. Work can wait :)
comment:24 by , 9 years ago
295 crackle. That let the possible bad commit to be within [291,294]. Let me know if you want me to test specific build of these (just make me a link).
comment:26 by , 9 years ago
@AlienSoldier does the issue happen also when you try to play the audio files using the commandline apps such as playfile/playwav? I'm trying to understand if the issue happens only with MediaPlayer. In fact lateness isn't handled at all by the MediaPlayer audio producer and it seems ToneProducer is working well. SoundPlay and MPlayer are working correctly, they both use BSoundPlayer that is in fact handling lateness.
comment:27 by , 9 years ago
Playfile play a mp3 without crackle. Seem that so far it only do that in mediaplayer. It does that wether the mediaplayer interface is on screen or not (as in another workspace).
comment:28 by , 9 years ago
Ho, and as Giova84 mentioned, wav file play fine in mediaplayer (perhaps they would not with a tad slower cpu, that i don't know). Used that most annoying sample :) http://download.wavetlan.com/SVV/Media/HTTP/WAV/Media-Convert/Media-Convert_test3_PCM_Stereo_VBR_16SS_11025Hz.wav
comment:29 by , 9 years ago
I'm very sorry I don't have much mental power to put into that, I'm stabilizing the BAdapterIO and adding subtitles support and it's not something trivial :-). If someone is interested in helping, there are only two commits in that range that could be responsible for this issue. Ideally someone that can compile Haiku should test two images with those two commits reverted respectively and see what happens. At minimum I can revert one of them or both.
I experience the same hrev50347 here. Subtle but very annoying.